--- a/modulo-5/0.-react/package.json
+++ b/modulo-5/0.-react/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "reactstrap": "^9.2.0"
   },
   "devDependencies": {
