--- a/modulo-5/0.-react/package.json
+++ b/modulo-5/0.-react/package.json
@@ -13,11 +13,13 @@
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
-    "reactstrap": "^9.2.0"
+    "reactstrap": "^9.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
